add tests to categories screen viewmodel