@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         minSdk = 31
-
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles("consumer-rules.pro")
     }
 
@@ -32,6 +32,11 @@ android {
     }
 }
 
+tasks.withType<Test> {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
+    useJUnitPlatform()
+}
+
 dependencies {
 
     implementation(project(":core:domain"))
@@ -50,5 +55,16 @@ dependencies {
     implementation(libs.androidx.core.ktx)
     implementation(libs.androidx.appcompat)
     implementation(libs.material)
+
+    testImplementation(libs.junit.jupiter)
+    testImplementation(kotlin("test"))
+
+    testImplementation(libs.mockk)
+    testImplementation(libs.mockk.android)
+
+    testRuntimeOnly(libs.junit.jupiter.engine)
+
+    testImplementation(libs.kotlinx.coroutines.test)
+
 
 }
